--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-<!doctype html>
-=======
-<!doctype html>
->>>>>>> devBranch
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
